    (closes: #217615)
  * debian/menu: Gave the full path to the fortune binary
    (closes: #218127)
  * debian/politics:811: Removed duplicate (and wrong) Monty Python
    quote
    (closes: #214701)
  * datfile/miscellaneous: Removed 3 spelling mistakes
    (closes: #215470)
  * datfile/humourist:1017: Added Nipsey Russell quote from Match Game 
    75
    (closes: #211144)

 -- Pascal Hakim <pasc@debian.org>  Fri, 31 Oct 2003 00:04:00 +1100

fortune-mod (9708-34) unstable; urgency=low

  * Updated to policy 3.6.1.0
  * datfile/literature:298: Moved Anne Frank remark to the 
    offensive section.
    (closes: #208467, #208468)
  * datfile/linux:1821: Added Andrew Suffield quote
    (closes: #208975)
  * Convert a fortune to the local charset before attempting a
    search on it. Fortunes will now be displayed correctly when
    searched for, and searches will work a bit better.
    (closes: #205000)
  * datfile/linux:1826: Added an Overfiend quote

 -- Pascal Hakim <pasc@debian.org>  Mon,  8 Sep 2003 15:23:40 +1000

fortune-mod (9708-33) unstable; urgency=low

  * Use librecode instead of iconv, to deal with non-existing 
    characters in locales better. (Patch from Aurelien Jarno 
    <aurelien@aurel32.net>)
    (closes: #205061, #201230)
  * datfile/kids:144: fixed typo
    (closes: #204199)

 -- Pascal Hakim <pasc@debian.org>  Fri, 22 Aug 2003 11:22:46 +1000

fortune-mod (9708-32) unstable; urgency=low

  * Added missing % at the end of a number of fortune cookies
    (closes: #202341)
  * Added missing Build-Depends
    (closes: #202325)

 -- Pascal Hakim <pasc@debian.org>  Tue, 22 Jul 2003 12:21:29 +1000

fortune-mod (9708-31) unstable; urgency=low

  * datfile/off/linux:30: Fixed spelling of lactating
    (closes: #200718)
  * datfile/off/linux:37: Added tbm quote
    (closes: #202220)
  * Added utf-8 support.
    (Patch from Eduard Bloch <edi@gmx.de>)
    (closes: #178392, #179595)

 -- Pascal Hakim <pasc@debian.org>  Mon, 21 Jul 2003 18:07:00 +1000
